AltaPerspectiva/src/AltaPerspectiva.Web/tsScripts/app/shared/dialog-modal/dialog.component.css
.dialog {
    padding: 30px;
    background-color: white;
    border: 1px solid black;
    border-radius: 5px;
    max-width: 60%;
    margin: 20px auto;
    flex-grow: 1;
    position:relative;
}

    .dialog p {
        margin-bottom: 10px;
    }

    .dialog header {
        border-bottom: 1px solid black;
        font-size: 12px;
        padding: 5px;
        display: flex;
    }

        .dialog header .title {
            flex-grow: 1;
            cursor: default;
        }
.exit-button {
            cursor: pointer;
            position:absolute;
            top:15px;
            right:15px;
            font-size: 30px;
        }

@media only screen and (max-width:767px){
    .dialog {
        max-width:95%;
        padding:5px;
    }
}

